# andamios-api

./: .env.development  .env.production  .env.test  README.md  pyproject.toml  pytest.ini  requirements.txt
andamios_api/core/: config.py
andamios_api/routers/: items.py  users.py
docs/: README.md
examples/: README.md  client_example.py  run_examples.py
examples/basic/: README.md  auth_example.py  config_example.py  error_handling_example.py  item_crud.py  user_crud.py  user_crud_auth.py  validation_example.py
src/andamios_api/: main.py
src/andamios_api/core/: config.py  exceptions.py
src/andamios_api/models/: __init__.py  item.py  user.py
src/andamios_api/routers/: auth.py  items.py  users.py
src/andamios_api/schemas/: item.py  user.py
tests/: conftest.py
tests/integration/: test_auth_integration.py  test_item_crud_integration.py  test_user_crud_integration.py  test_validation_integration.py
tests/unit/: test_schemas.py
